# mlang

./: Cargo.toml  README.md  TODO.md
mlang-core/src/: lib.rs  main.rs  prelude.rs  program.rs
mlang-core/src/constructs/: ast.rs  iter.rs  mod.rs  variable.rs
mlang-core/src/interpret/: environment.rs  mod.rs
mlang-core/src/parse/: mod.rs  parse_ast.rs  parse_expr.rs  parse_match_expr.rs
mlang-core/src/tokenize/: mod.rs
mlang-core/src/verify/: mod.rs
mlang-core/test_files/: test2.mlg
mlang-interpreter/: Cargo.toml
mlang-interpreter/src/: lib.rs  main.rs  program.rs
mlang-interpreter/src/interpret/: builtin.rs  environment.rs  iter.rs  mod.rs
mlang-interpreter/test_files/: test1.mlg  test2.mlg
mlang-support-vscode/mlang-language-support/: README.md  language-configuration.json  package.json
mlang-support-vscode/mlang-language-support/syntaxes/: mlang.tmLanguage.json
mlang-yew/: Cargo.toml  index.html  styles.css
mlang-yew/src/: main.rs
src/: lib.rs  main.rs  program.rs
src/constructs/: ast.rs  iter.rs  mod.rs  program.rs  token.rs  variable.rs
src/constructs/token/: mod.rs  span.rs  symbol.rs  tokens.rs
src/interpret/: execution.rs  mod.rs
src/mlang/: ast.rs  iter.rs  mod.rs  program.rs  variable.rs
src/mlang/interpret/: execution.rs
src/mlang/parse/: mod.rs  parse.rs  parse_ast.rs  parse_expr.rs  parse_match_expr.rs  parse_tokens.rs  tokens.rs  util.rs
src/parse/: mod.rs  parse_ast.rs  parse_expr.rs  parse_match_expr.rs  parse_tokens.rs  token_queue.rs
src/tokenize/: mod.rs
src/verify/: mod.rs
test_files/: test2.mlg
(+3 files in other folders)
