[package]
name = "mlang-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
mlang = { path = "../mlang-core" }
mlang_interpreter = { path = "../mlang-interpreter" }
wasm-logger = "0.2.0"
web-sys = "0.3.65"
log = "0.4.20"
